@@ -410,12 +410,14 @@ class block_homework_moodle_utils {
                     'coursemodule' => $coursemodule["id"],
                     'intro' => $description,
                     'introformat' => 1,
-                    'alwaysshowdescription' => 1,
-                    'submissiondrafts' => 0,
-                    'requiresubmissionstatement' => 0,
-                    'sendnotifications' => 1,
-                    'sendlatenotifications' => 1,
-                    'sendstudentnotifications' => 1,
+                    // next few bits use defaults set in 
+                    // Site administration / Plugins / Activity modules / Assignment / Assignment settings
+                    'alwaysshowdescription' => get_config('assign','alwaysshowdescription'),
+                    'submissiondrafts' => get_config('assign','submissiondrafts'),
+                    'requiresubmissionstatement' => get_config('assign','requiresubmissionstatement'),
+                    'sendnotifications' => get_config('assign','sendnotifications'),
+                    'sendlatenotifications' => get_config('assign','sendlatenotifications'),
+                    'sendstudentnotifications' => get_config('assign','sendstudentnotifications'),
                     'duedate' => $duedate,
                     'cutoffdate' => 0,
                     'allowsubmissionsfromdate' => $availabledate,
